fixed horizontal scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@
     --Dark-gray: hsl(0, 0%, 59%);
 }
 
+html {
+    overflow-x: hidden;
+}
 
 .body {
     min-height: 100vh;    
@@ -119,46 +122,6 @@
 
 }
 
-/* 
-@media (min-width: 400px)  {
-    
-    
-    .bg-pattern-bottom {
-
-        right: -66%;
-        bottom: -41%;
-    }
-
-    .bg-pattern-top {
-
-        top: -17%;
-        left: -82%;
-
-    }
-
-
-
-}
-
-@media (min-width: 800px) {
-
-
-    .bg-pattern-bottom {
-
-        right: -10%;
-        bottom: -20%;
-    }
-
-    .bg-pattern-top {
-
-        top: -10%;
-        left: -10%;
-
-    }
-
-}
-
- */
 
 
 
